--- a/views/posts/index.jade
+++ b/views/posts/index.jade
@@ -1,8 +1,7 @@
 extends ../layout
 
 block scripts
-  script(src="/javascripts/editor.js")
-  script(src="/javascripts/posts.js")
+  script(src="/javascripts/app/posts.js")
 
 block content
   .row
