--- a/views/layout.jade
+++ b/views/layout.jade
@@ -31,10 +31,17 @@ html(lang="en")
     script(src="/javascripts/form/jquery.form.js")
     script(src="/javascripts/jquery-pjax/jquery.pjax.js")
     script(src='/javascripts/jquery-notify/src/jquery.notify.js')
+    script(src='/javascripts/mustache.js')
     // app javascripts
     script(src="/javascripts/app/app.js")
     script(src="/javascripts/app/editor.js")
     script(src="/javascripts/app/post-modify.js")
+
+    if(user)
+      script
+        var user = {
+          avatar : '#{avatar(user.md5, 64)}'
+        }
 
     block scripts
 
@@ -71,15 +78,15 @@ html(lang="en")
             include posts/editor-bar-outer
             form(method="post", name="modifypost")
               textarea(placeholder="Say something", name="content",
-              style="width:100%"){{revisions[revisions.length - 1].content}}
+              style="width:100%"){{ revisions[revisions.length - 1].content }}
               .clearfix.editor-bar
                 include posts/editor-bar
               .clearfix
                 .right
                   input.btn.primary(type="submit", value="Modify")
                 input(name="message", placeholder="commit message")
-                input(name="title", type="hidden", value="#\{entry.title}")
-              .preview {{html}}
+                input(name="title", type="hidden", value="{{ entry.title }}")
+              .preview {{{ html }}}
 
         #comment-template
           include posts/comment
@@ -88,9 +95,9 @@ html(lang="en")
           .row
             .avatar-info
               .avatar
-                a.avatar(href="#", style="background-image:url('{{avatar(user.md5, 32)}}')", title="Jason's blog")
+                a.avatar(href="#", style="background-image:url('{{ user.avatar }}')", title="Jason's blog")
             .span11
-              form(action='/post/{{id}}/comments/{{operation}}', method='post')
+              form(action='/post/{{ id }}/comments/{{ operation }}', method='post')
                 textarea(name="content", style="width:100%")
                 input.btn.primary(type="submit", value="comment")
       #notify-container.ui-notify
