sync google reader feeds, #5, #9

--- a/views/preferences.jade
+++ b/views/preferences.jade
@@ -17,7 +17,7 @@ block content
 
     .clearfix
       .input
-        a(href='/google-reader') google reader
+        a(href='/google-reader?next=#{encodeURIComponent(url)}') google reader
 
 
     .clearfix
