--- a/views/posts/index.jade
+++ b/views/posts/index.jade
@@ -1,7 +1,7 @@
 extends ../layout
 
 block scripts
-  script(src="/javascripts/app/posts.js")
+  script(src="/javascripts/posts/pages/index.js")
 
 block content
   .row
