--- a/views/preferences.jade
+++ b/views/preferences.jade
@@ -50,6 +50,6 @@ block content
           | using #{user.email}
 
     .actions
-      input.btn.primary(type="submit", value="Save settings")
+      input.btn.btn-primary(type="submit", value="Save settings")
       &nbsp;
       button.btn(type="reset") Cancel
