--- a/views/index.jade
+++ b/views/index.jade
@@ -16,7 +16,7 @@ block content
       .input
         input(name="password", type="password", placeholder="Password", required)
     .actions
-      input.btn.primary(type="submit", value="Sign in")
+      input.btn.btn-primary(type="submit", value="Sign in")
       &nbsp;
       a(href='signup') Sign up
 
