fix more button

--- a/views/posts/modify-pjax.jade
+++ b/views/posts/modify-pjax.jade
@@ -9,7 +9,7 @@
       .clearfix.editor-bar
         include editor-bar
       .right
-        input.btn.primary(type="submit", value="Modify")
+        input.btn.btn-primary(type="submit", value="Modify")
       input(name="message", placeholder="commit message")
       input(name="title", type="hidden", value=entry.title)
   .span8
