--- a/views/posts/new-post-editor.jade
+++ b/views/posts/new-post-editor.jade
@@ -34,7 +34,7 @@
           textarea(name="description", maxlength="120", placeholder="enter your description[url]")
 
         .clearfix
-          input.btn.primary(type="submit", value="Post")
+          input.btn.btn-primary(type="submit", value="Post")
 
       .tips.lazy
         .right
