--- a/views/users/signin.jade
+++ b/views/users/signin.jade
@@ -16,6 +16,6 @@ block content
       .input
         input(name="password", type="password", placeholder="Password")
     .actions
-      input.btn.primary(type="submit", value="Sign in")
+      input.btn.btn-primary(type="submit", value="Sign in")
       &nbsp;
       button.btn(type="reset") Cancel
