--- a/views/users/signup.jade
+++ b/views/users/signup.jade
@@ -22,7 +22,7 @@ block content
         input(name='repeat-password', type='password', placeholder='Repeat Password', required)
 
     .actions
-      input.btn.primary(type='submit', value='Sign up')
+      input.btn.btn-primary(type='submit', value='Sign up')
       &nbsp;
       a.pjax(href="/signin") Sign in
 
