--- a/views/index.jade
+++ b/views/index.jade
@@ -5,20 +5,20 @@ block content
     h1 Sign in&nbsp;
       small enter the world of posts
 
-  form#form-signin(action='/api/signin', method='post')
-    .clearfix
-      label(for="email") Username
-      .input
-        input(name="email", placeholder="User name", required)
+  form.form-horizontal#form-signin(action='/api/signin', method='post')
+    .control-group
+      label.control-label(for="email") Email
+      .controls
+        input(name="email", placeholder="Email", required)
 
-    .clearfix
-      label(for="password") Password
-      .input
+    .control-group
+      label.control-label(for="password") Password
+      .controls
         input(name="password", type="password", placeholder="Password", required)
-    .actions
+    .form-actions
       input.btn.btn-primary(type="submit", value="Sign in")
       &nbsp;
-      a(href='signup') Sign up
+      a.btn(href='signup') Sign up
 
 block scripts
   script
