--- a/views/users/signup.jade
+++ b/views/users/signup.jade
@@ -5,23 +5,23 @@ block content
     h1 Sign up &nbsp;
       small
 
-  form.signup(method='post', action='/signup')
-    .clearfix
-      label(for='email') Email
-      .input
+  form.form-horizontal.signup(method='post', action='/signup')
+    .control-group
+      label.control-label(for='email') Email
+      .controls
         input(type='email', name='email', placeholder='Email', required)
 
-    .clearfix
-      label(for='password') Password
-      .input
+    .control-group
+      label.control-label(for='password') Password
+      .controls
         input(name='password', type='password', placeholder='Password', required)
 
-    .clearfix
-      label(for='repeat-password') Repeat Password
-      .input
+    .control-group
+      label.control-label(for='repeat-password') Repeat Password
+      .controls
         input(name='repeat-password', type='password', placeholder='Repeat Password', required)
 
-    .actions
+    .form-actions
       input.btn.btn-primary(type='submit', value='Sign up')
       &nbsp;
       a.pjax(href="/signin") Sign in
