--- a/views/posts/index.jade
+++ b/views/posts/index.jade
@@ -12,3 +12,33 @@ block content
       #posts-list
         - for entry in posts
           include entry-pjax
+
+block template
+  #template-modify-post
+    .editor
+      include editor-bar-outer
+      form(method="post", name="modifypost")
+        textarea(placeholder="Say something", name="content",
+        style="width:100%"){{ revisions[revisions.length - 1].content }}
+        .clearfix.editor-bar
+          include editor-bar
+        .clearfix
+          .right
+            input.btn.btn-primary(type="submit", value="Modify")
+          input(name="message", placeholder="commit message")
+          input(name="title", type="hidden", value="{{ entry.title }}")
+        .preview {{{ html }}}
+
+  #template-comment
+    include comment
+  #template-comment-form
+    // TODO simplfy this
+    .row
+      .avatar-info
+        .avatar
+          // FIXME this will load an non exists image
+          a.avatar(href="#", style="background-image:url('{{ user.avatar }}')", title="Jason's blog")
+      .span9
+        form(action='/post/{{ id }}/comments/{{ operation }}', method='post')
+          textarea(name="content", style="width:100%")
+          input.btn.btn-primary(type="submit", value="comment")
