--- a/views/posts/index.jade
+++ b/views/posts/index.jade
@@ -14,6 +14,8 @@ block content
           include entry-pjax
 
 block template
+  #template-post-entry
+    include entry-tpl
   #template-remove-post
     p.clearfix Are you sure?
     br
