use jade as client templates

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -39,10 +39,15 @@ html(lang="en")
     script(src="/javascripts/jquery-pjax/jquery.pjax.js")
     // jquery notify
     script(src='/javascripts/jquery-notify/src/jquery.notify.js')
-    // mustache template engine
-    script(src='/javascripts/mustache.js')
+    // template engine
+    // script(src='/javascripts/jst.js')
+    script(src='/javascripts/jade.runtime.js')
+    // compiled templates
+    script(src='/javascripts/posts/templates.js')
     script(src='/javascripts/async.js')
     script(src='/javascripts/md5.js')
+    script(src='/javascripts/url.js')
+    script(src='/javascripts/dateformat.js')
     // app javascripts
     script(src="/javascripts/posts/lib/base.js")
     script(src="/javascripts/posts/lib/editor.js")
