--- a/views/layout.jade
+++ b/views/layout.jade
@@ -48,6 +48,7 @@ html(lang="en")
     script(src='/javascripts/md5.js')
     script(src='/javascripts/url.js')
     script(src='/javascripts/dateformat.js')
+    script(src='/javascripts/smartdate.js')
     // app javascripts
     script(src="/javascripts/posts/lib/base.js")
     script(src="/javascripts/posts/lib/editor.js")
