mv common/dateformat to share.js

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -47,8 +47,7 @@ html(lang="en")
     script(src='/javascripts/async.js')
     script(src='/javascripts/md5.js')
     script(src='/javascripts/url.js')
-    script(src='/javascripts/dateformat.js')
-    script(src='/javascripts/smartdate.js')
+    script(src='/javascripts/share.js')
     // app javascripts
     script(src="/javascripts/posts/lib/base.js")
     script(src="/javascripts/posts/lib/editor.js")
