fix like icon persistent

--- a/views/posts/entry-tpl.jade
+++ b/views/posts/entry-tpl.jade
@@ -69,7 +69,7 @@
       // span.icon.star.clickable.tipsy(class = false && 'fill', title="Mark")
 
       // TODO (personalize, fee, user icon) use card, heart as like, spade as dislike, club as share, diamond as favorit
-      span.icon.heart.clickable.tipsy(class = false && 'fill', title="Like")
+      span.icon.heart.clickable.tipsy(class = post.comInfo.isLike && 'fill', title="Like")
       span.icon.none
         // TODO xxx participate in this post, 3 different way, choose 1, click head icon view his comments only
         // 1. your friends participate
