add loading image

--- a/public/stylesheets/icons.less
+++ b/public/stylesheets/icons.less
@@ -40,6 +40,12 @@
     opacity: 0.3;
   }
 
+  &.loading {
+    width: 160px;
+    opacity: 0.4;
+    background: url(../images/loading.gif);
+  }
+
   &.trash {
     background: url(../images/trash_stroke.png);
   }
