center loading style

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -99,12 +99,12 @@ html(lang="en")
 
       footer
         p All rights reserved. &copy; posts.li 2011
-        p Powered by 
-          a(href="http://www.expressjs.org") express
-          ,&nbsp;
-          a(href="http://twitter.github.com/bootstrap") bootstrap
-          ,&nbsp;
-          a(href="http://somerandomdude.com/work/iconic/") iconic
-          &nbsp;and
-          a(href=user && "/user/#{user._id}") you
-          .
+          &nbsp;
+          span Powered by 
+            a(href="http://www.expressjs.org") express
+            ,&nbsp;
+            a(href="http://twitter.github.com/bootstrap") bootstrap
+            ,&nbsp;.
+          span Icon use 
+            a(href="http://somerandomdude.com/work/iconic/") iconic
+            .
