--- a/views/posts/index.jade
+++ b/views/posts/index.jade
@@ -11,7 +11,7 @@ block content
       include entry-pjax
 
   #posts-loading
-    .icon.loading.right
+    .icon.loading
 
 block template
   script#template-remove-post(type='jst')
