--- a/public/stylesheets/posts.less
+++ b/public/stylesheets/posts.less
@@ -50,7 +50,7 @@
 
 
 .post-controls {
-  visibility: hidden;
+  // visibility: hidden;
   .special-chars {
     font-family: serif;
     font-size: 16px;
@@ -61,9 +61,9 @@
   }
 }
 
-.post:hover .post-controls {
-  visibility: visible;
-}
+// .post:hover .post-controls {
+//   visibility: visible;
+// }
 
 .right {
   float: right;
