--- a/views/layout.jade
+++ b/views/layout.jade
@@ -12,7 +12,7 @@ html(lang="en")
     //if lt IE 9
       script(src="http://html5shim.googlecode.com/svn/trunk/html5.js")
 
-    if(debug)
+    if(DEBUG)
       script(src='/javascripts/jquery-1.7.1.min.js')
       // required by jquery notify
       script(src='/javascripts/jquery.ui.widget.js')
