--- a/views/users/signup.jade
+++ b/views/users/signup.jade
@@ -24,7 +24,7 @@ block content
     .form-actions
       input.btn.btn-primary(type='submit', value='Sign up')
       &nbsp;
-      a.pjax(href="/signin") Sign in
+      a(href="/signin") Sign in
 
 block scripts
   script
